# fracfocus-deo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
config/: collector.yaml
fracfocus/: __init__.py  config.py  loggers.py  manage.py  wsgi.py
fracfocus/api/: completion.py  mixins.py  models.py  well.py
fracfocus/api/schema/: __init__.py  comp.py  well.py
fracfocus/collector/: __init__.py  collector.py  downloader.py  endpoint.py  parser.py  row_parser.py  transformer.py
fracfocus/metrics/: metrics.py
fracfocus/util/: __init__.py
migrations/versions/: 0395eda87251_.py  0939e60510fd_.py  10f881dcc11b_.py  20d2e25ee1bf_.py  2c41d311c1dd_.py  32983281204f_.py  35b9394003cb_.py  37c8ce16ff47_.py  3d20bae505be_.py  3e69bf0d673a_.py  443c95eca738_.py  4d5a7f435434_.py  84e14e92ad25_.py  ae069a9aeeec_.py  ef074201f4ed_.py
scripts/: deploy.py
sql/: init.pgsql
terraform/: ecs.tf  ecs_scheduled_task.tf  main.tf  service_discovery.tf  variables.tf
tests/: __init__.py  conftest.py
tests/collector/: test_endpoint.py
tests/data/: collector.yaml
